<resources>
    <string name="app_name">Filmatcher</string>
    <string name="txt_netflix">Netflix</string>
    <string name="txt_disney">Disney+</string>
    <string name="txt_max">MAX</string>
    <string name="txt_movistar">Movistar+</string>
    <string name="txt_amazon">Amazon Prime</string>
    <string name="txt_reject">Reject</string>
    <string name="txt_accept">Accept</string>
    <string name="txt_username">Usuario: %s</string>
    <string name="txt_appletv">txt_appletv</string>
    <string name="txt_back_to_main">volver a inicio</string>
    <string name="txt_matches">Matches</string>
    <string name="txt_liked_films">Mis películas</string>
    <string name="txt_no_title">Sin título</string>">
    <string name="txt_genre">Género(s): %s</string>
    <string name="txt_year">Año: %s</string>
    <string name="txt_year_unknown">Año desconocido</string>
    <string name="txt_no_sinopsis">Sin sinopsis disponible</string>
    <string name="base_image_url">https://image.tmdb.org/t/p/w500%s</string>
    <string name="txt_title">Título</string>
    <string name="txt_app_logo">App Logo</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_login">Iniciar Sesión</string>
    <string name="txt_register">Registrarse</string>
    <string name="txt_search_matches">Buscar películas en común:</string>
    <string name="txt_search_user">Usuario a buscar</string>
    <string name="icon_search">🔍</string>
    <string name="txt_search_film_by_provider">Buscar películas por plataforma:</string>
    <string name="txt_confirm_password">Confirmar Contraseña</string>
    <string name="txt_ask_if_register">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="txt_stored_films">Películas guardadas</string>
    <string name="txt_delete_movie">Eliminar película</string>
    <string name="txt_delete">Eliminar</string>
    <string name="delete_confirmation">¿Estás seguro de que quieres eliminar %s?</string>
    <string name="txt_film_deleted">Película eliminada</string>
    <string name="txt_cancel">Cancelar</string>
    <string name="txt_no_stored_films">No tienes películas guardadas</string>
    <string name="txt_close">Cerrar</string>
    <string name="txt_provider_filter">Filtrar por plataforma</string>
    <string name="txt_user">Usuario</string>
    <string name="txt_empty_fields">Rellena todos los campos</string>
    <string name="txt_login_success">Inicio de sesión exitoso</string>
    <string name="txt_wrong_password">Contraseña incorrecta</string>
    <string name="txt_user_not_found">Usuario no encontrado</string>
    <string name="txt_login_failed">Error al verificar usuario</string>
    <string name="txt_input_username">Ingresa un nombre de usuario</string>
    <string name="txt_logout_selected">Menú \'Cerrar sesión\' seleccionado</string>
    <string name="txt_films_matches">Películas en común</string>
    <string name="txt_error_data_user">Faltan datos de usuario</string>
    <string name="txt_no_matches">Sin coincidencias</string>
    <string name="txt_matches_size">Coincidencias: %d</string>
    <string name="txt_reset_movies">Reiniciar películas</string>
    <string name="txt_ask_reset_movies">¿Estás seguro de que quieres reiniciar?</string>
    <string name="txt_yes">Sí</string>
    <string name="txt_no">No</string>
    <string name="txt_films_reseted">Películas reiniciadas</string>
    <string name="txt_pages_size">Total de páginas: %d</string>
    <string name="txt_no_films_available">No hay más películas disponibles</string>
    <string name="txt_search_film_by_genre">Elige un género</string>
    <string name="txt_compulsory_fields">Todos los campos son obligatorios</string>
    <string name="txt_password_length">La contraseña debe tener al menos 6 caracteres</string>
    <string name="txt_password_match">Las contraseñas no coinciden</string>
    <string name="txt_username_exists">El usuario ya existe</string>
    <string name="txt_error_register">Error al verificar usuario</string>
    <string name="txt_user_registered">Usuario registrado con éxito</string>
    <string name="txt_user_stored_failure">Error al guardar el usuario</string>
    <string name="txt_my_films">Mis películas</string>
    <string name="txt_logout">Cerrar sesión</string>
    <string name="txt_filter_by_provider">Filtrar por plataforma</string>
    <string name="txt_filter_by_genre">Filtrar por género</string>
    <string name="txt_overview">Sinopsis</string>
    <string name="txt_year_title">Año de lanzamiento</string>
    <string name="txt_release_date">01/01/2000</string>
    <string name="txt_genre_title">Género(s)</string>
    <string name="txt_genre_description">Acción, Terror…</string>
    <string name="txt_realese_date_title">Fecha de lanzamiento</string>
    <string name="txt_no_internet_title">Sin conexión a internet</string>
    <string name="txt_no_internet_message">No puedes acceder a esta sección sin internet.</string>
    <string name="txt_ok">Aceptar</string>
    <string name="genre_action">Acción</string>
    <string name="genre_adventure">Aventura</string>
    <string name="genre_animation">Animación</string>
    <string name="genre_comedy">Comedia</string>
    <string name="genre_crime">Crimen</string>
    <string name="genre_documentary">Documental</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Familia</string>
    <string name="genre_fantasy">Fantasía</string>
    <string name="genre_history">Historia</string>
    <string name="genre_horror">Terror</string>
    <string name="genre_music">Música</string>
    <string name="genre_mystery">Misterio</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_scifi">Ciencia ficción</string>
    <string name="genre_tv_movie">Película de TV</string>
    <string name="genre_thriller">Suspense</string>
    <string name="genre_war">Bélica</string>
    <string name="genre_western">Oeste</string>
    <string name="genre_unknown">Desconocido</string>
    <string name="txt_required_field">Campo obligatorio</string>
    <string name="txt_user_stored_success">Usuario registrado correctamente</string>
    <string name="txt_alert_title">Error de registro</string>
    <string name="tmdb_logo">Logo de TMDb</string>
    <string name="tmdb_attrib">Este producto usa TMDB API pero no está firmado o certificado por TMDB.</string>
    <string name="txt_about">Acerca de</string>
    <string name="txt_about_message">Filmatcher es un producto creado por Jose Antonio Pinilla, estudiante de Desarrollo de aplicaciones multiplataforma. Utiliza la API de TMDB pero no esta soportado ni firmado por TMDB.</string>
</resources>