<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Grupo de opciones normales -->
    <group android:id="@+id/group_main">
        <item
            android:id="@+id/action_likes"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/txt_my_films"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/menu_divider"
        android:title=" "
        android:enabled="false"
        app:showAsAction="never" />
    <!-- Separador automático para opciones secundarias -->
    <group >
        <item
            android:id="@+id/action_logout"
            android:icon="@android:drawable/ic_menu_close_clear_cancel"
            android:menuCategory="secondary"
            android:title="@string/txt_logout"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_about"
            android:icon="@android:drawable/ic_menu_help"
            android:menuCategory="secondary"
            android:title="@string/txt_about"
            app:showAsAction="never" />
    </group>

</menu>
