<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/md_theme_onBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/dialog_background"
        android:padding="16dp"
        android:elevation="1dp">

        <!-- Movie Title -->
        <TextView
            android:id="@+id/tv_movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/md_theme_primary"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/txt_title" />

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/md_theme_secondary"
            android:layout_marginBottom="12dp" />

        <!-- Overview Section -->
        <TextView
            android:id="@+id/tv_overview_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/md_theme_primary"
            android:layout_marginBottom="8dp"
            android:text="@string/txt_overview" />

        <TextView
            android:id="@+id/tv_overview_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"
            android:textColor="@color/md_theme_secondary"
            android:layout_marginBottom="16dp"
            android:text="@string/txt_overview" />

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/md_theme_secondary"
            android:layout_marginBottom="12dp" />

        <!-- Release Date Section -->
        <TextView
            android:id="@+id/tv_release_date_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/md_theme_primary"
            android:layout_marginBottom="8dp"
            android:text="@string/txt_realese_date_title" />

        <TextView
            android:id="@+id/tv_release_date_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"
            android:textColor="@color/md_theme_secondary"
            android:layout_marginBottom="16dp"
            android:text="@string/txt_release_date" />

        <!-- Divider -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/md_theme_secondary"
            android:layout_marginBottom="12dp" />

        <!-- Genres Section -->
        <TextView
            android:id="@+id/tv_genre_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/md_theme_primary"
            android:layout_marginBottom="8dp"
            android:text="@string/txt_genre_title" />

        <TextView
            android:id="@+id/tv_genre_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:lineSpacingExtra="4dp"
            android:textColor="@color/md_theme_secondary"
            android:layout_marginBottom="16dp"
            android:text="@string/txt_genre_description" />

    </LinearLayout>
</ScrollView>
