<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp"

    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    android:clipToOutline="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/md_theme_primary_semi2"
    tools:context=".ui.playmatch.PlayMatchActivity">

    <!-- Contenedor interno para tu contenido -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Título de la película -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/txt_title"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Título" />

        <!-- Imagen principal (poster) -->
        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="270dp"
            android:layout_height="280dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:adjustViewBounds="true"
            tools:srcCompat="@tools:sample/avatars" />

        <!-- Logo del proveedor (ej. Netflix, Disney, etc.) -->
        <ImageView
            android:id="@+id/ivProvider"
            android:layout_width="82dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            app:srcCompat="@drawable/netflix" />

        <!-- Año de la película -->
        <TextView
            android:id="@+id/tvYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/txt_year"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white"
            tools:text="Año 2023" />

        <!-- Géneros de la película (ya no se corta al usar breakStrategy) -->
        <TextView
            android:id="@+id/tvGenere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:breakStrategy="simple"
            android:ellipsize="none"
            android:hyphenationFrequency="full"
            android:text="@string/txt_genre"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white"
            tools:text="Género 1, Género 2, Género 3, Género 4, Género 5" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
